WIP - Fixed image stretching and widened bookmark button

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,7 +1,7 @@
 .card-activity {
   overflow: hidden;
   background: whitesmoke;
-  height: 300px;
+  height: 250px;
   color: black;
   border-radius: 20px;
   padding: 16px;
