--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -5,3 +5,7 @@
   border-radius: 20px;
   color: black;
 }
+
+#new_bookmark {
+  display: flex;
+}
