--- a/app/assets/stylesheets/components/_image.scss
+++ b/app/assets/stylesheets/components/_image.scss
@@ -1,4 +1,5 @@
 .img-preview {
+  display: flex;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
